--- a/membership.html
+++ b/membership.html
@@ -7,46 +7,111 @@
   <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
 	<meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
   <meta name="author" content="Wall Of Gains">
-  <link hre="css/style.css", href="css/game.css" rel="stylesheet" type="text/css">
+  <link hre="css/style.css", href="css/game.css", href="css/membership.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
   <title>Wall Of Gains - Game Section</title>
 </head>
 <!--- top of page python3 -m http.server-->
 
 <body>
-<section>
-    <div class="container">
-        <header id="home">
-            <div class="audio-div">
-                <audio autoplay="" controls="" preload="auto">
-                    <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-                <p class="play-me">Play Me! while you read</p>
+    <!--header-->
+    <section>
+        <div class="container">
+            <header id="home">
+                <div class="audio-div">
+                    <audio autoplay="" controls="" preload="auto">
+                        <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                    <p class="play-me">Play Me! while you read</p>
+                </div>
+                <ul>
+                    <li><a href="home page.html" class="active">Home</a></li>
+                    <li><a href="#contact us" class="active">Contact</a></li>
+                </ul>
+            </header>
+            <div class="intro-content-box">
+                <h2>Membership</h2> 
+                <p>Join our membership today to get access to get full access to our server. That means NFT calls, both solana and ethereum, future calls, sport bets. Our community are enjoying the profits you should too.</p>  
             </div>
-            <ul>
-                <li><a href="home page.html" class="active">Home</a></li>
-                <li><a href="#contact us" class="active">Contact</a></li>
-            </ul>
-        </header>
-        <div class="intro-content-box">
-            <h2>Membership</h2> 
-            <p>Join our membership today to get access to get full access to our server. That means NFT calls, both solana and ethereum, future calls, sport bets. Our community are enjoying the profits you should too.</p>  
+            <div class="logo-div">
+                <img class="logo" src="css/images/wall-of-gain.png">
+            </div>
         </div>
-        <div class="logo-div">
-            <img class="logo" src="css/images/wall-of-gain.png">
-        </div>
-    </div>
-
+    </section>
+<!--membership options-->
+<section class="membership-options">
     <div class="membership-container">
         <div class="membership-card">
             <div class="membership-box">
                 <div class="membership-content">
                     <div class="d/l-icon"></div>
-                    <h3>Basic</h3>
+                    <h3>1 Month Premium</h3>
                     <h4>$30<sup>P/M</sup></h4>
                     <ul>
-                        <li><!--membership benefits--></li>
+                        <li>One on one calls</li>
+                        <li>Solana NFT calls</li>
+                        <li>ethereum NFT calls</li>
+                        <li>Futures Calls</li>
+                        <li>Sports betting</li>
+                        <li>Wl opportunities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="membership-container">
+        <div class="membership-card">
+            <div class="membership-box">
+                <div class="membership-content">
+                    <div class="d/l-icon"></div>
+                    <h3>3 Month Premium</h3>
+                    <h4>$70<sup>P/M</sup></h4>
+                    <ul>
+                        <li>One on one calls</li>
+                        <li>Solana NFT calls</li>
+                        <li>ethereum NFT calls</li>
+                        <li>Futures Calls</li>
+                        <li>Sports betting</li>
+                        <li>Wl opportunities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="membership-container">
+        <div class="membership-card">
+            <div class="membership-box">
+                <div class="membership-content">
+                    <div class="d/l-icon"></div>
+                    <h3>6 Month Premium</h3>
+                    <h4>$135<sup>P/M</sup></h4>
+                    <ul>
+                        <li>One on one calls</li>
+                        <li>Solana NFT calls</li>
+                        <li>ethereum NFT calls</li>
+                        <li>Futures Calls</li>
+                        <li>Sports betting</li>
+                        <li>Wl opportunities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="membership-container">
+        <div class="membership-card">
+            <div class="membership-box">
+                <div class="membership-content">
+                    <div class="d/l-icon"></div>
+                    <h3>12 Month Premium</h3>
+                    <h4>$245<sup>P/M</sup></h4>
+                    <ul>
+                        <li>One on one calls</li>
+                        <li>Solana NFT calls</li>
+                        <li>ethereum NFT calls</li>
+                        <li>Futures Calls</li>
+                        <li>Sports betting</li>
+                        <li>Wl opportunities</li>
                     </ul>
                 </div>
             </div>
