--- a/membership.html
+++ b/membership.html
@@ -2,20 +2,20 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
-	<meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
-  <meta name="author" content="Wall Of Gains">
-  <link hre="css/style.css", href="css/game.css", href="css/membership.css" rel="stylesheet" type="text/css">
-  <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
-  <title>Wall Of Gains - Game Section</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
+    <meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
+    <meta name="author" content="Wall Of Gains">
+    <link href="css/style.css" href="css/game.css" href="css/membership.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
+    <title>Wall Of Gains - Game Section</title>
 </head>
 <!--- top of page python3 -m http.server-->
 
 <body>
     <!--header-->
-    <section>
+    <section class="header-section">
         <div class="container">
             <header id="home">
                 <div class="audio-div">
@@ -40,6 +40,7 @@
         </div>
     </section>
 <!--membership options-->
+
 <section class="membership-options">
     <div class="membership-container">
         <div class="membership-card">
@@ -118,3 +119,5 @@
         </div>
     </div>
 </section>
+</body>
+</html>
