--- a/membership.html
+++ b/membership.html
@@ -7,14 +7,16 @@
     <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
     <meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
     <meta name="author" content="Wall Of Gains">
-    <link href="css/style.css", href="css/game.css" ,href="css/membership.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" href="css/game.css" href="css/membership.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
     <title>Wall Of Gains - Game Section</title>
 </head>
 <!--- top of page python3 -m http.server-->
 
 <body>
+
     <!--header-->
+    
     <section class="header-section">
         <div class="container">
             <header id="home">
@@ -39,6 +41,7 @@
             </div>
         </div>
     </section>
+
 <!--membership options-->
 
 <section class="membership-options">
