--- a/membership.html
+++ b/membership.html
@@ -51,7 +51,7 @@
                 <div class="membership-content">
                     <div class="d/l-icon"></div>
                     <h3>1 Month Premium</h3>
-                    <h4>$30<sup>P/M</sup></h4>
+                    <h4>$30<br><sup>($1 Per/Day)</sup></h4>
                     <ul>
                         <li>One on one calls</li>
                         <li>Solana NFT calls</li>
@@ -60,6 +60,7 @@
                         <li>Sports betting</li>
                         <li>Wl opportunities</li>
                     </ul>
+                    <a href="#">Buy Now</a> 
                 </div>
             </div>
         </div>
@@ -70,7 +71,7 @@
                 <div class="membership-content">
                     <div class="d/l-icon"></div>
                     <h3>3 Month Premium</h3>
-                    <h4>$70<sup>P/M</sup></h4>
+                    <h4>$70<br><sup>($0.77 Per/Day)</sup></h4>
                     <ul>
                         <li>One on one calls</li>
                         <li>Solana NFT calls</li>
@@ -79,6 +80,7 @@
                         <li>Sports betting</li>
                         <li>Wl opportunities</li>
                     </ul>
+                    <a href="https://system.discordpaymentbot.com/login?redirect=%2Fsubscribe%3Fguild%3D939156059099131924">Buy Now</a> 
                 </div>
             </div>
         </div>
@@ -89,7 +91,7 @@
                 <div class="membership-content">
                     <div class="d/l-icon"></div>
                     <h3>6 Month Premium</h3>
-                    <h4>$135<sup>P/M</sup></h4>
+                    <h4>$135<br><sup>($0.75 Per/Day)</sup></h4>
                     <ul>
                         <li>One on one calls</li>
                         <li>Solana NFT calls</li>
@@ -98,6 +100,7 @@
                         <li>Sports betting</li>
                         <li>Wl opportunities</li>
                     </ul>
+                    <a href="#">Buy Now</a> 
                 </div>
             </div>
         </div>
@@ -108,7 +111,7 @@
                 <div class="membership-content">
                     <div class="d/l-icon"></div>
                     <h3>12 Month Premium</h3>
-                    <h4>$245<sup>P/M</sup></h4>
+                    <h4>$245<br><sup>($0.67 Per/Day)</sup></h4>
                     <ul>
                         <li>One on one calls</li>
                         <li>Solana NFT calls</li>
@@ -117,6 +120,7 @@
                         <li>Sports betting</li>
                         <li>Wl opportunities</li>
                     </ul>
+                    <a href="#">Buy Now</a> 
                 </div>
             </div>
         </div>
