--- a/game section.html
+++ b/game section.html
@@ -7,7 +7,7 @@
   <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
 	<meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
   <meta name="author" content="Wall Of Gains">
-  <link hre="css/style.css", href="css/game.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css", href="css/game.css", href="game.js" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
   <title>Wall Of Gains - Game Section</title>
 </head>
@@ -43,7 +43,7 @@
 </section>
 
 <!--Coin Flip-->
-<section class="cf-section"> <!--act as body-->
+<section class="cf-section">
     <header class="coinflip-header">
             <h2>Coin Flip</h2>
     </header>
@@ -64,6 +64,8 @@
             <button id="head-pick">Heads</button>
             <button id="tails-pick">Tails</button>
             <button id="flip-button">Flip</button>
+            <br>
+            <span id="result"></span>
         </div>
     </div>    
 </section>
