--- a/game section.html
+++ b/game section.html
@@ -9,7 +9,6 @@
     <meta name="author" content="Wall Of Gains">
     <link href="css/game.css" href="css/game.js" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
-    <script src="ccs/game.js"></script>
     <title>Wall Of Gains - Game Section</title>
 </head>
 <!--- top of page python3 -m http.server-->
@@ -69,10 +68,10 @@
                 <span id="result"></span>
             </div>
         </div> 
-        <script src="ccs/game.js" charset="Utf-8"></script>
     </section>
 <!--Snake-->
-    <section class="snake-section"> <!--act as body-->
+    <section class="snake-section"> 
         <div id="gameboard"></div>
+        <script src="css/game.js" defer type="module"></script>
     </section>
 </body>
