--- a/game section.html
+++ b/game section.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
     <meta name="author" content="Wall Of Gains">
     <link href="css/game.css" href="css/game.js" rel="stylesheet" type="text/css">
+    <script src="css/game.js" defer type="module"></script>
     <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
     <title>Wall Of Gains - Game Section</title>
 </head>
@@ -71,7 +72,6 @@
     </section>
 <!--Snake-->
     <section class="snake-section"> 
-        <div id="gameboard"></div>
-        <script src="css/game.js" defer type="module"></script>
+        <div id="gameBoard"></div>
     </section>
 </body>
