--- a/game section.html
+++ b/game section.html
@@ -72,6 +72,9 @@
     </section>
 <!--Snake-->
     <section class="snake-section"> 
+        <header class="snake-header">
+            <h2>Snake</h2>
+        </header>
         <div id="gameBoard"></div>
-    </section>
 </body>
+</html>
