fixed some errors, cant focus due to illness

--- a/home page.html
+++ b/home page.html
@@ -323,7 +323,7 @@
   </div>
   <div>
     <h3>Ethereum marketplaces</h3>
-    <div class="eth-iframe"> <!-- start here-->
+    <div class="eth-iframe"> 
       <iframe class="rarible" src="https://rarible.com" title="Rarible Homepage"></iframe>
     </div>
     <div>
@@ -336,7 +336,7 @@
   <div>
     <h3>Futures</h3>
     <div class="future-iframe-wrap">
-      <iframe class="future-iframe" src="https://www.youtube.com/embed/VYWc9dFqROI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="future-iframe" src="https://www.youtube.com/embed/VYWc9dFqROI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div class="different-marketplace-text">
         <h3 class="marketplace-heading">Different Marketplaces</h3>
         <ul class="future-list">
