--- a/home page.html
+++ b/home page.html
@@ -47,96 +47,97 @@
     </section>
 
   <!--team section--> 
-<section class="team-container" id="wall-of-gains">
-  <div class="headings-box">
-    <h2>The Founders</h2>
-  </div>
-  <div class="card">
+  <section class="team-container" id="wall-of-gains">
+    <section class="headings-box" style="
+      position: relative;
+  ">
+      <h2>The Founders</h2>
+    </section>
+    <div class="card">
+      <div class="imgbox">
+        <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
+        <img src="css/images/nk.pfp.jpeg" alt="Nk 2nd PF"><!--2nd nft pic-->
+      </div>
+        <div class="details">
+          <div class="content">
+            <h3>Nk<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+            <div class="social-icons">
+              <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="card">
     <div class="imgbox">
-      <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
-      <img src="css/images/nk.pfp.jpeg" alt="Nk 2nd PF" ><!--2nd nft pic-->
+      <img src="css/images/chase-pfp.png" alt="Chase profile picture">
+      <img src="css/images/chase-pfp.png" alt="Chase 2nd PF"><!--2nd nft pic-->
     </div>
       <div class="details">
         <div class="content">
-          <h3>Nk<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+          <h3>Chase<br><span>Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha.</span></h3>
           <div class="social-icons">
-            <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+            <a class="t-logo-bottom" href="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+    <div class="imgbox">
+      <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
+      <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris 2nd PF"><!--2nd nft pic-->
+    </div>
+      <div class="details">
+        <div class="content">
+          <h3>CryptoChris<br><span>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe.</span></h3>
+          <div class="social-icons">
+            <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="css/images/sim-pfp.png" alt="Sim profile picture">
+        <img src="css/images/sim-pfp.png" alt="Sim 2nd PF"><!--2nd nft pic-->
+      </div>
+      <div class="details">
+        <div class="content">
+          <h3>Sim<br><span>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</span></h3>
+          <div class="social-icons">
+            <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div class="card">
+    <div class="imgbox">
+      <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick profile picture">
+      <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick 2nd PF"><!--2nd nft pic-->
+    </div>
+      <div class="details">
+        <div class="content">
+          <h3>Stayin_Blick<br><span>Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs.</span></h3>
+          <div class="social-icons">
+            <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
           </div>
         </div>
       </div>
   </div>
   <div class="card">
-  <div class="imgbox">
-    <img src="css/images/chase-pfp.png" alt="Chase profile picture">
-    <img src="css/images/chase-pfp.png" alt="Chase 2nd PF" ><!--2nd nft pic-->
-  </div>
-    <div class="details">
-      <div class="content">
-        <h3>Chase<br><span>Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha.</span></h3>
-        <div class="social-icons">
-          <a class="t-logo-bottom" href="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-  <div class="imgbox">
-    <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
-    <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris 2nd PF" ><!--2nd nft pic-->
-  </div>
-    <div class="details">
-      <div class="content">
-        <h3>CryptoChris<br><span>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe.</span></h3>
-        <div class="social-icons">
-          <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="card">
     <div class="imgbox">
-      <img src="css/images/sim-pfp.png" alt="Sim profile picture">
-      <img src="css/images/sim-pfp.png" alt="Sim 2nd PF" ><!--2nd nft pic-->
+      <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
+      <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr 2nd PF"><!--2nd nft pic-->
     </div>
-    <div class="details">
-      <div class="content">
-        <h3>Sim<br><span>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</span></h3>
-        <div class="social-icons">
-          <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+      <div class="details">
+        <div class="content">
+          <h3>CyberWolfgr<br><span>Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content.</span></h3>
+          <div class="social-icons">
+            <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
         </div>
       </div>
-    </div>
   </div>
-<div class="card">
-  <div class="imgbox">
-    <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick profile picture">
-    <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick 2nd PF" ><!--2nd nft pic-->
-  </div>
-    <div class="details">
-      <div class="content">
-        <h3>Stayin_Blick<br><span>Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs.</span></h3>
-        <div class="social-icons">
-          <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-</div>
-<div class="card">
-  <div class="imgbox">
-    <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
-    <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr 2nd PF" ><!--2nd nft pic-->
-  </div>
-    <div class="details">
-      <div class="content">
-        <h3>CyberWolfgr<br><span>Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content.</span></h3>
-        <div class="social-icons">
-          <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-</div>
-</section>
-
+  </section>
   <!--Callers-->
 <section class="profit-container">
   <div class="heaading-box">
@@ -145,51 +146,53 @@
   <div>
     <p class = "caller-content-box">A term you will come across in this space, is the Callers. Callers are indivudals that have been in their respective space for an amount of time and have been able to increase their wins, through developing their analytic skills when it comes to Nfts or Futures. Callers in our discord research and provide informatin for those in the community  allowing them to share their opinion in the community.</p>
   </div>
-  <div class = "caller-box">
-    <span></span>
-    <div class="callers-content">
-      <h3>Solana Callers</h3>
-      <ul class="callers-list">
-        <li>Nk</li>
-        <li>Chase</li>
-        <li>Mps</li>
-        <li>Duke</li>
-        <li>hokage</li>
-        <li>Apa</li>
-        <li>Otzurk</li>
-        <li>degen plays</li>
-      </ul>
+  <section>
+    <div class = "caller-box">
+      <span></span>
+      <div class="callers-content">
+        <h3>Solana Callers</h3>
+        <ul class="callers-list">
+          <li>Nk</li>
+          <li>Chase</li>
+          <li>Mps</li>
+          <li>Duke</li>
+          <li>hokage</li>
+          <li>Apa</li>
+          <li>Otzurk</li>
+          <li>degen plays</li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class = "caller-box">
-    <span></span>
-    <div class="callers-content">
-      <h3>Ethereum Callers</h3>
-      <ul class="callers-list">
+    <div class = "caller-box">
+      <span></span>
+      <div class="callers-content">
+        <h3>Ethereum Callers</h3>
+        <ul class="callers-list">
           <li>Chase</li>
           <li>Mo</li>
           <li>Sain</li>
           <li>degen plays</li>
-      </ul>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class = "caller-box">
-    <span></span>
-    <div class="callers-content">
-      <h3>Futures Callers</h3>
-      <ul class="callers-list">
-        <li>Chase</li>
-        <li>Duke</li>
-        <li>Ajzee</li>
-        <li>Simon</li>
-        <li>Sparkers</li>
-        <li>Skordo</li>
-        <li>Crypto-Cream bot</li>
-        <li>Tba</li>
-        <li>Tba</li>
-      </ul>
+    <div class = "caller-box">
+      <span></span>
+      <div class="callers-content">
+        <h3>Futures Callers</h3>
+        <ul class="callers-list">
+          <li>Chase</li>
+          <li>Duke</li>
+          <li>Ajzee</li>
+          <li>Simon</li>
+          <li>Sparkers</li>
+          <li>Skordo</li>
+          <li>Crypto-Cream bot</li>
+          <li>Tba</li>
+          <li>Tba</li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </section>
 </section>
 
 <!--profits-->
